Fix issue with overflow on small screen

--- a/frontend/app/styles/globals.scss
+++ b/frontend/app/styles/globals.scss
@@ -20,7 +20,6 @@ main {
 	justify-content: center;
 	width: 100%;
 	padding: 2em;
-	overflow: hidden;
 
 	background-image: url("/home_back.jpg");
 	background-color: $navbar-background;
